# ainetb2b

./: .env.example  .gitignore  Dockerfile.railway  package-lock.json  package.json  railway.toml
.claude/: settings.local.json
.instructions-for-claude/: backend_architecture.md  frontend_architecture.md
ainet-voice-agent/: .env.example  Dockerfile  pyproject.toml
ainet-voice-agent/agent/: billing_reporter.py  config_loader.py  main.py  tool_executor.py  transcript_tracker.py  voice_agent.py
docs/superpowers/plans/: 2026-03-14-admin-voice-pages.md
docs/superpowers/specs/: 2026-03-14-admin-voice-design.md
src/__tests__/: mock-test.ts
src/app/: globals.css  layout.tsx
src/app/(admin)/: layout.tsx
src/app/(admin)/admin/clients/: page.tsx
src/app/(admin)/admin/dashboard/: page.tsx
src/app/(admin)/admin/projects/: page.tsx
src/app/(admin)/admin/reports/: page.tsx
src/app/(admin)/admin/settings/: page.tsx
src/app/(admin)/admin/voice/: page.tsx
src/app/(auth)/login/: page.tsx
src/app/(client)/: layout.tsx
src/app/(client)/client/dashboard/: page.tsx
src/app/api/clients/: route.ts
src/app/api/clients/[id]/: route.ts
src/app/api/credits/: route.ts
src/app/api/projects/: route.ts
src/app/api/usage/: route.ts
src/components/shared/: AdminSidebar.tsx  AiNetLogo.tsx  ClientSidebar.tsx  MetricCard.tsx
src/lib/: api.ts  callProxy.ts  credits.ts
src/lib/supabase/: server.ts
src/types/: database.ts
supabase/migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_voice_agents.sql  004_vapi_features.sql
(+17 files in other folders)
